--- a/action.yml
+++ b/action.yml
@@ -19,9 +19,9 @@ inputs:
     description: 'Specify a repository where the issue will be created. e.g. rerost/issue-creator'
     default: ${{ github.repository }}
 outputs:
-  issue-number:
+  new-issue-number:
     description: 'The issue number of the created issue'
-    default: 'Error: No issue number was output.'
+    default: "echo 'No issue number was output'"
 runs:
   using: "docker"
   image: 'Dockerfile.actions'
